IHM final_integration/CAS4-SDK/VC2013/CAS4.h

/* $Revision$ */

// error codes

#define ErrorNoError                      0
#define ErrorUnknown                     -1
#define ErrorTimeoutRWSNoData            -2
#define ErrorInvalidDeviceType           -3
#define ErrorAcquisition                 -4
#define ErrorAccuDataStream              -5
#define ErrorPrivilege                   -6
#define ErrorFIFOOverflow                -7
#define ErrorTimeoutEOSScan              -8
#define ErrorTimeoutEOSDummyScan         -9
#define ErrorFifoFull                   -10
#define ErrorPixel1FinalCheck           -11
#define ErrorCCDTemperatureFail         -13
#define ErrorAdrControl                 -14
#define ErrorFloat                      -15
#define ErrorTriggerTimeout             -16
#define ErrorAbortWaitTrigger           -17
#define ErrorDarkArray                  -18
#define ErrorNoCalibration              -19
#define ErrorInterfaceVersion           -20
#define ErrorCRI                        -21
#define ErrorNoMultiTrack               -25
#define ErrorInvalidTrack               -26
#define ErrorDetectPixel                -31
#define ErrorSelectParamSet             -32
#define ErrorI2CInit                    -35
#define ErrorI2CBusy                    -36
#define ErrorI2CNotAck                  -37
#define ErrorI2CRelease                 -38
#define ErrorI2CTimeOut                 -39
#define ErrorI2CTransmission            -40
#define ErrorI2CController              -41
#define ErrorDataNotAck                 -42
#define ErrorNoExternalADC              -52
#define ErrorShutterPos                 -53
#define ErrorFilterPos                  -54
#define ErrorConfigSerialMismatch       -55
#define ErrorCalibSerialMismatch        -56
#define ErrorInvalidParameter           -57
#define ErrorGetFilterPos               -58
#define ErrorParamOutOfRange            -59
#define ErrorDeviceFileChecksum         -60
#define ErrorInvalidEEPromType          -61
#define ErrorDeviceFileTooLarge         -62
#define ErrorNoCommunication            -63
#define ErrorNoFilesOnIdentKey          -64
#define ErrorExtraCalibFileInvalid      -66
#define ErrorFeatureNotSupported        -68
#define ErrorConfigUpToDate             -70
#define ErrorCommunicationTimeout       -73
#define ErrorTransmissionSerialMismatch -74
#define errCASOK                 ErrorNoError
#define errCASError              -1000
#define errCasNoConfig           errCASError-3
#define errCASDriverMissing      errCASError-6 //driver problem
#define errCasDeviceNotFound     errCASError-10 //invalid ADevice param
/////////////////////
// Error handling  //
/////////////////////
extern int __callconv casGetError( int ADevice );
extern char* __callconv casGetErrorMessage( int AError, char* Dest, int AMaxLen );
///////////////////////////////////
// Device Handles and Interfaces //
///////////////////////////////////
#define InterfaceISA          0
#define InterfacePCI          1
#define InterfaceTest         3
#define InterfaceUSB          5
#define InterfacePCIe        10
#define InterfaceEthernet    11
extern int __callconv casCreateDevice( void );
extern int __callconv casCreateDeviceEx( int AInterfaceType, int AInterfaceOption );
extern int __callconv casChangeDevice( int ADevice, int AInterfaceType, int AInterfaceOption );
extern int __callconv casDoneDevice( int ADevice );
#define aoAssignDevice     0
#define aoAssignParameters 1
#define aoAssignComplete   2
extern int __callconv casAssignDeviceEx( int ASourceDevice, int ADestDevice, int AOption );
extern int __callconv casGetDeviceTypes( void );
extern char* __callconv casGetDeviceTypeName( int AInterfaceType, char* Dest, int AMaxLen );
extern int __callconv casGetDeviceTypeOptions( int AInterfaceType );
extern int __callconv casGetDeviceTypeOption( int AInterfaceType, int AIndex );
extern char* __callconv casGetDeviceTypeOptionName( int AInterfaceType, int AInterfaceOptionIndex, char* Dest, int AMaxLen );
////////////////////
// Initialization //
////////////////////

#define InitOnce        0
#define InitForced      1
#define InitNoHardware  2
extern int __callconv casInitialize( int ADevice, int Perform );
///////////////////////////
// Instrument properties //
///////////////////////////

//AWhat parameter constants for DeviceParameter methods below
#define dpidIntTimeMin                  101
#define dpidIntTimeMax                  102
#define dpidDeadPixels                  103
#define dpidVisiblePixels               104
#define dpidPixels                      105
#define dpidParamSets                   106
#define dpidCurrentParamSet             107
#define dpidADCRange                    108
#define dpidADCBits                     109
#define dpidSerialNo                    110
#define dpidTOPSerial                   111 //TOP200 only, use dpidTOPSerialEx and dpidTOPType for others
#define dpidTransmissionFileName        112
#define dpidConfigFileName              113
#define dpidCalibFileName               114
#define dpidCalibrationUnit             115
#define dpidAccessorySerial             116
#define dpidTriggerCapabilities         118
#define dpidAveragesMax                 119
#define dpidFilterType                  120
#define dpidRelSaturationMin            123
#define dpidRelSaturationMax            124
#define dpidInterfaceVersion            125
#define dpidTriggerDelayTimeMax         126
#define dpidSpectrometerName            127
#define dpidNeedDarkCurrent             130
#define dpidNeedDensityFilterChange     131
#define dpidSpectrometerModel           132
#define dpidLine1FlipFlop               133
#define dpidTimer                       134
#define dpidInterfaceType               135
#define dpidInterfaceOption             136
#define dpidInitialized                 137
#define dpidDCRemeasureReasons          138
#define dpidAbortWaitForTrigger         140
#define dpidGetFilesFromDevice          142
#define dpidTOPType                     143
#define dpidTOPSerialEx                 144
#define dpidAutoRangeFilterMin          145
#define dpidAutoRangeFilterMax          146
#define dpidMultiTrackMaxCount          147
#define dpidSLCFileInfo                 148
#define dpidCheckConfigFileSerial       149
#define dpidCheckCalibFileSerial        150
#define dpidExtraTransmissionsFileInfo  152
#define dpidMultiTrackCount             153
#define dpidIntTimePossibleResolutions  154
#define dpidCalibDate                   155
#define dpidTriggerDelayTimeMin         159
#define dpidWavelengthCalibrationType   160
#define dpidCheckReferenceSpectrumFile  162
#define dpidFlashDurationMin            163
#define dpidDebugLogFile                204
#define dpidDebugLogLevel               205
#define dpidDebugMaxLogSize             206
//TriggerCapabilities constants; see dpidTriggerCapabilities
#define tcoCanTrigger                   0x00000001
#define tcoTriggerDelay                 0x00000002
#define tcoTriggerOnlyWhenReady         0x00000004
#define tcoAutoRangeTriggering          0x00000008
#define tcoShowBusyState                0x00000010
#define tcoShowACQState                 0x00000020
#define tcoFlashOutput                  0x00000040
#define tcoFlashHardware                0x00000080
#define tcoFlashHardwareForEachAverage  0x00000100
#define tcoFlashSoftwareDelay           0x00000200
#define tcoFlashSoftwareDelayNegative   0x00000400
#define tcoFlashSoftware                0x00000800
#define tcoGetFlipFlopState             0x00001000
#define tcoQueryHasData                 0x00002000
#define tcoACQStatePolarity             0x00004000
#define tcoBusyStatePolarity            0x00008000
#define tcoFlashHardwareDelay           0x00010000
#define tcoFlashHardwareDelayNegative   0x00020000
#define tcoFlashHardwareDuration        0x00040000
//obsolete TriggerCapabilities(11/2018); backward compatibility after renaming
//use the ones they are aliased to
#define tcoFlashForEachAverage  tcoFlashHardwareForEachAverage
#define tcoFlashDelay           tcoFlashSoftwareDelay
#define tcoFlashDelayNegative   tcoFlashSoftwareDelayNegative
//DCRemeasureReasons constants; see dpidDCRemeasureReasons 
#define todcrrNeedDarkCurrent   0x0001
#define todcrrCCDTemperature    0x0002
//TOPType constants; see dpidTOPType
#define ttNone        0
#define ttTOP100      1
#define ttTOP200      2
#define ttTOP150      3
#define ttTOPLumiTOP  4
//dpidDebugLogLevel constants
#define DebugLogLevelErrors              1
#define DebugLogLevelSaturation          2
#define DebugLogLevelHardwareEvents      3
#define DebugLogLevelParameterChanges    4
#define DebugLogLevelAllMethodCalls     10
extern double __callconv casGetDeviceParameter( int ADevice, int AWhat );
extern int __callconv casSetDeviceParameter( int ADevice, int AWhat, double AValue );
extern int __callconv casGetDeviceParameterString( int ADevice, int AWhat, char* ADest, int AMaxLen );
extern int __callconv casSetDeviceParameterString( int ADevice, int AWhat, char* AValue );
#define casSerialComplete   0
#define casSerialAccessory  1
#define casSerialExtInfo    2
#define casSerialDevice     3
#define casSerialTOP        4
extern int __callconv casGetSerialNumberEx( int ADevice, int AWhat, char* Dest, int AMaxLen );
#define coShutter                  0x00000001
#define coFilter                   0x00000002
#define coGetShutter               0x00000004
#define coGetFilter                0x00000008
#define coGetAccessories           0x00000010
#define coGetTemperature           0x00000020
#define coUseDarkcurrentArray      0x00000040
#define coUseTransmission          0x00000080
#define coAutorangeMeasurement     0x00000100
#define coAutorangeFilter          0x00000200
#define coCheckCalibConfigSerials  0x00000400
#define coTOPHasFieldOfViewConfig  0x00000800
#define coAutoRemeasureDC          0x00001000
#define coCanMultiTrack            0x00008000
#define coCanSwitchLEDOff          0x00010000
#define coLEDOffWhileMeasuring     0x00020000
#define coCheckConfigUpToDate      0x00040000
#define coCanAverageOnDevice       0x00080000
#define coCanMultiTrackSensorTemp  0x00100000
extern int __callconv casGetOptions( int ADevice );
extern void __callconv casSetOptionsOnOff( int ADevice, int AOptions, int AOnOff );
extern void __callconv casSetOptions( int ADevice, int AOptions );
//////////////////////////
// Measurement Commands //
//////////////////////////
extern int __callconv casMeasure( int ADevice );
extern int __callconv casStart( int ADevice );
extern int __callconv casFIFOHasData( int ADevice );
extern int __callconv casGetFIFOData( int ADevice );
extern int __callconv casMeasureDarkCurrent( int ADevice );
#define paPrepareMeasurement            1
#define paLoadCalibration               3
#define paCheckAccessories              4
#define paMultiTrackStart               5
#define paAutoRangeFindParameter        7
#define paCheckConfigUpToDate          12
#define paSearchForDevices             13
#define paPrepareShutDown              14
#define paRecalcSpectrum               16
#define paUpdateSpectralCalibration    19
#define paUpdateCompleteCalibration    20
#define paCheckAccessoriesTransmission 21
#define paMeasureParamSets             24
#define paMeasureParamSetsDC           25
extern int __callconv casPerformAction( int ADevice, int AId ); //deprecated, use casPerformActionEx
extern int __callconv casPerformActionEx( int ADevice, int AActionID, int AParam1, int AParam2, void *AParam3 );