IHM final_integration/CAS4-SDK/Delphi/CAS4DLL.pas

unit CAS4DLL;

interface

const
  ErrorNoError                     =   0;
  ErrorUnknown                     =  -1;
  ErrorTimeoutRWSNoData            =  -2;
  ErrorInvalidDeviceType           =  -3;
  ErrorAcquisition                 =  -4;
  ErrorAccuDataStream              =  -5;
  ErrorPrivilege                   =  -6;
  ErrorFIFOOverflow                =  -7;
  ErrorTimeoutEOSScan              =  -8; //ISA only
  ErrorTimeoutEOSDummyScan         =  -9;
  ErrorFifoFull                    = -10; //USB
  ErrorPixel1FinalCheck            = -11; //test for pixel1 on n+1. failed
  ErrorCCDTemperatureFail          = -13;
  ErrorAdrControl                  = -14;
  ErrorFloat                       = -15; //floating point error
  ErrorTriggerTimeout              = -16;
  ErrorAbortWaitTrigger            = -17;
  ErrorDarkArray                   = -18;
  ErrorNoCalibration               = -19;
  ErrorInterfaceVersion            = -20;
  ErrorCRI                         = -21;
  ErrorNoMultiTrack                = -25;
  ErrorInvalidTrack                = -26;
  ErrorDetectPixel                 = -31;
  ErrorSelectParamSet              = -32;
  ErrorI2CInit                     = -35;
  ErrorI2CBusy                     = -36;
  ErrorI2CNotAck                   = -37;
  ErrorI2CRelease                  = -38;
  ErrorI2CTimeOut                  = -39;
  ErrorI2CTransmission             = -40;
  ErrorI2CController               = -41; 
  ErrorDataNotAck                  = -42;
  ErrorNoExternalADC               = -52;
  ErrorShutterPos                  = -53;
  ErrorFilterPos                   = -54;
  ErrorConfigSerialMismatch        = -55;
  ErrorCalibSerialMismatch         = -56;
  ErrorInvalidParameter            = -57;
  ErrorGetFilterPos                = -58;
  ErrorParamOutOfRange             = -59;
  ErrorDeviceFileChecksum          = -60;
  ErrorInvalidEEPromType           = -61;
  ErrorDeviceFileTooLarge          = -62;
  ErrorNoCommunication             = -63;
  ErrorNoFilesOnIdentKey           = -64;
  ErrorExtraCalibFileInvalid       = -66;
  ErrorFeatureNotSupported         = -68;
  ErrorConfigUpToDate              = -70;
  ErrorCommunicationTimeout        = -73;
  ErrorTransmissionSerialMismatch  = -74;

  errCASOK                 = ErrorNoError;

  errCASError              = -1000;
  errCasNoConfig           = errCASError-3;
  errCASDriverMissing      = errCASError-6; //driver problem
  errCasDeviceNotFound     = errCASError-10; //invalid ADevice param


//Error handling
function casGetError(ADevice: Integer): Integer; stdcall;
function casGetErrorMessage(AError: Integer; ADest: PChar; AMaxLen: Integer): PChar; stdcall;

//Device Handles and Interfaces
const
  InterfaceISA         = 0;
  InterfacePCI         = 1;
  InterfaceTest        = 3;
  InterfaceUSB         = 5;
  InterfacePCIe        = 10;
  InterfaceEthernet    = 11;

function casCreateDevice: Integer; stdcall;
function casCreateDeviceEx(AInterfaceType: Integer; AInterfaceOption: Integer): Integer; stdcall;
function casChangeDevice(ADevice: Integer; AInterfaceType: Integer; AInterfaceOption: Integer): Integer; stdcall;
function casDoneDevice(ADevice: Integer): Integer; stdcall;

const
  aoAssignDevice     = 0;
  aoAssignParameters = 1;
  aoAssignComplete   = 2;

function casAssignDeviceEx(ASourceDevice, ADestDevice, AOption: Integer): Integer; stdcall;

function casGetDeviceTypes: Integer; stdcall;
function casGetDeviceTypeName(AInterfaceType: Integer; Dest: PChar; AMaxLen: Integer): PChar; stdcall;
function casGetDeviceTypeOptions(AInterfaceType: Integer): Integer; stdcall;
function casGetDeviceTypeOption(AInterfaceType, AIndex: Integer): Integer; stdcall;
function casGetDeviceTypeOptionName(AInterfaceType: Integer; AInterfaceOptionIndex: Integer; Dest: PChar; AMaxLen: Integer): PChar; stdcall;

//Initialization

const
  InitOnce       = 0;
  InitForced     = 1;
  InitNoHardware = 2;

function casInitialize(ADevice: Integer; Perform: Integer): Integer; stdcall;

//Instrument properties

const
  //AWhat parameter constants for DeviceParameter methods below
  dpidIntTimeMin                 = 101;
  dpidIntTimeMax                 = 102;
  dpidDeadPixels                 = 103;
  dpidVisiblePixels              = 104;
  dpidPixels                     = 105;
  dpidParamSets                  = 106;
  dpidCurrentParamSet            = 107;
  dpidADCRange                   = 108;
  dpidADCBits                    = 109;
  dpidSerialNo                   = 110;
  dpidTOPSerial                  = 111; //TOP200 only, use dpidTOPSerialEx and dpidTOPType for others
  dpidTransmissionFileName       = 112;
  dpidConfigFileName             = 113;
  dpidCalibFileName              = 114;
  dpidCalibrationUnit            = 115;
  dpidAccessorySerial            = 116;
  dpidTriggerCapabilities        = 118;
  dpidAveragesMax                = 119;
  dpidFilterType                 = 120;
  dpidRelSaturationMin           = 123;
  dpidRelSaturationMax           = 124;
  dpidInterfaceVersion           = 125;
  dpidTriggerDelayTimeMax        = 126;
  dpidSpectrometerName           = 127;
  dpidNeedDarkCurrent            = 130;
  dpidNeedDensityFilterChange    = 131;
  dpidSpectrometerModel          = 132;
  dpidLine1FlipFlop              = 133;
  dpidTimer                      = 134;
  dpidInterfaceType              = 135;
  dpidInterfaceOption            = 136;
  dpidInitialized                = 137;
  dpidDCRemeasureReasons         = 138;
  dpidAbortWaitForTrigger        = 140;
  dpidGetFilesFromDevice         = 142;
  dpidTOPType                    = 143;
  dpidTOPSerialEx                = 144;
  dpidAutoRangeFilterMin         = 145;
  dpidAutoRangeFilterMax         = 146;
  dpidMultiTrackMaxCount         = 147;
  dpidSLCFileInfo                = 148;
  dpidCheckConfigFileSerial      = 149;
  dpidCheckCalibFileSerial       = 150;
  dpidExtraTransmissionsFileInfo = 152;
  dpidMultiTrackCount            = 153;
  dpidIntTimePossibleResolutions = 154;
  dpidCalibDate                  = 155;
  dpidTriggerDelayTimeMin        = 159;
  dpidWavelengthCalibrationType  = 160;
  dpidCheckReferenceSpectrumFile = 162;
  dpidFlashDurationMin           = 163;

  dpidDebugLogFile               = 204;
  dpidDebugLogLevel              = 205;
  dpidDebugMaxLogSize            = 206;
  
  
  //dpidTriggerCapabilities TriggerCapabilities constants
  tcoCanTrigger                   = $00000001;
  tcoTriggerDelay                 = $00000002;
  tcoTriggerOnlyWhenReady         = $00000004;
  tcoAutoRangeTriggering          = $00000008;
  tcoShowBusyState                = $00000010;
  tcoShowACQState                 = $00000020;
  tcoFlashOutput                  = $00000040;
  tcoFlashHardware                = $00000080;
  tcoFlashHardwareForEachAverage  = $00000100;
  tcoFlashSoftwareDelay           = $00000200;
  tcoFlashSoftwareDelayNegative   = $00000400;
  tcoFlashSoftware                = $00000800;
  tcoGetFlipFlopState             = $00001000;
  tcoQueryHasData                 = $00002000;
  tcoACQStatePolarity             = $00004000;
  tcoBusyStatePolarity            = $00008000;
  tcoFlashHardwareDelay           = $00010000;
  tcoFlashHardwareDelayNegative   = $00020000;
  tcoFlashHardwareDuration        = $00040000;

  //deprecated TriggerCapabilities; use the ones they are aliased to
  tcoFlashForEachAverage  = tcoFlashHardwareForEachAverage;
  tcoFlashDelay           = tcoFlashSoftwareDelay;
  tcoFlashDelayNegative   = tcoFlashSoftwareDelayNegative;

  //dpidDCRemeasureReasons flags
  todcrrNeedDarkCurrent   = $0001;
  todcrrCCDTemperature    = $0002;

  //TOPType constants; see dpidTOPType
  ttNone       = 0;
  ttTOP100     = 1;
  ttTOP200     = 2;
  ttTOP150     = 3;
  ttTOPLumiTOP = 4;

  //dpidDebugLogLevel constants
  DebugLogLevelErrors = 1;
  DebugLogLevelSaturation = 2;
  DebugLogLevelHardwareEvents = 3;
  DebugLogLevelParameterChanges = 4;
  DebugLogLevelAllMethodCalls = 10;
  
function casGetDeviceParameter(ADevice: Integer; AWhat: Integer): Double; stdcall;
function casSetDeviceParameter(ADevice: Integer; AWhat: Integer; AValue: Double): Integer; stdcall;
function casGetDeviceParameterString(ADevice: Integer; AWhat: Integer; ADest: PChar; ADestSize: Integer): Integer; stdcall;
function casSetDeviceParameterString(ADevice: Integer; AWhat: Integer; AValue: PChar): Integer; stdcall;

const
  casSerialComplete  = 0;
  casSerialAccessory = 1;
  casSerialExtInfo   = 2;
  casSerialDevice    = 3;
  casSerialTOP       = 4;

function casGetSerialNumberEx(ADevice: Integer; AWhat: Integer; Dest: PChar; AMaxLen: Integer): Integer; stdcall;

const
  coShutter                 = $00000001;
  coFilter                  = $00000002;
  coGetShutter              = $00000004;
  coGetFilter               = $00000008;
  coGetAccessories          = $00000010;
  coGetTemperature          = $00000020;
  coUseDarkcurrentArray     = $00000040;
  coUseTransmission         = $00000080;
  coAutorangeMeasurement    = $00000100;
  coAutorangeFilter         = $00000200;
  coCheckCalibConfigSerials = $00000400;
  coTOPHasFieldOfViewConfig = $00000800;
  coAutoRemeasureDC         = $00001000;
  coCanMultiTrack           = $00008000;
  coCanSwitchLEDOff         = $00010000;
  coLEDOffWhileMeasuring    = $00020000;
  coCheckConfigUpToDate     = $00040000;
  coCanAverageOnDevice      = $00080000;
  coCanMultiTrackSensorTemp = $00100000;

function casGetOptions(ADevice: Integer): Integer; stdcall;
procedure casSetOptionsOnOff(ADevice: Integer; AOptions: Integer; AOnOff: Integer); stdcall;
procedure casSetOptions(ADevice: Integer; AOptions: Integer); stdcall;

// Measurement commands
function casMeasure(ADevice: Integer): Integer; stdcall;

function casStart(ADevice: Integer): Integer; stdcall;
function casFIFOHasData(ADevice: Integer): Integer; stdcall;
function casGetFIFOData(ADevice: Integer): Integer; stdcall;

function casMeasureDarkCurrent(ADevice: Integer): Integer; stdcall;

const
  paPrepareMeasurement           =  1;
  paLoadCalibration              =  3;
  paCheckAccessories             =  4;
  paMultiTrackStart              =  5;
  paAutoRangeFindParameter       =  7;
  paCheckConfigUpToDate          = 12;
  paSearchForDevices             = 13;
  paPrepareShutDown              = 14;
  paRecalcSpectrum               = 16;
  paUpdateSpectralCalibration    = 19;
  paUpdateCompleteCalibration    = 20;
  paCheckAccessoriesTransmission = 21;
  paMeasureParamSets             = 24;
  paMeasureParamSetsDC           = 25;
  
function casPerformAction(ADevice: Integer; AID: Integer): Integer; stdcall; //deprecated, use casPerformActionEx
function casPerformActionEx(ADevice: Integer; AActionID, AParam1, AParam2: Integer; AParam3: Pointer): Integer; stdcall;

//Measurement Parameter
